styles/pagination.css
.pagination {
  display: flex;
  align-items: center;
  margin-top: 2rem;
}

.pagination .previous {
  margin-right: 0.45rem;
}

.pagination .next {
  margin-left: 0.45rem;
}

.page-link {
  position: relative;
  display: grid;
  width: 100%;
  height: 100%;
  place-content: center;
}

.page-item {
  width: 32px;
  aspect-ratio: 1/1;
  color: #d9d9d9;
  background-color: #212529;
  border: 1px solid #444444;
  transition: 0.4s all;
}

.page-item:not(.selected):hover {
  z-index: 2;
  color: #000 !important;
  text-decoration: none;
  background-color: #fff !important;
  border-color: #343a40 !important;
}

.page-item.selected {
  z-index: 3;
  color: #fff !important;
  opacity: 0.5;
  cursor: default;
}

.page-item.disabled {
  opacity: 0.5;
  cursor: default;
}

